# mental-poker

./: .editorconfig  .gitignore  COPYRIGHT.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  rustfmt.toml
.github/workflows/: test.yml
barnett-smart-card-protocol/: Cargo.toml
barnett-smart-card-protocol/examples/: parameter_selection.rs  round.rs
barnett-smart-card-protocol/src/: error.rs  lib.rs
barnett-smart-card-protocol/src/discrete_log_cards/: masking.rs  mod.rs  remasking.rs  reveal.rs  tests.rs
barnett-smart_card_protocol/: Cargo.toml
barnett-smart_card_protocol/examples/: round.rs
barnett-smart_card_protocol/src/: error.rs  lib.rs
barnett-smart_card_protocol/src/discrete_log_cards/: masking.rs  mod.rs  remasking.rs  reveal.rs  tests.rs
barnett-smart_card_protocol/src/discrete_log_cards/key_ownership/: mod.rs
barnett-smart_card_protocol/src/discrete_log_cards/masking_arg/: mod.rs
barnett-smart_card_protocol/src/discrete_log_cards/remasking_arg/: mod.rs
card-protocol-wasm/: Cargo.toml  LICENSE_MIT
card-protocol-wasm/src/: lib.rs
card_protocol/: Cargo.toml
card_protocol/src/: lib.rs
card_protocol/src/discrete_log_vtmp/: mod.rs  tests.rs
crypto_primitives/: Cargo.toml
crypto_primitives/benches/: shuffle.rs
crypto_primitives/src/: error.rs  lib.rs
crypto_primitives/src/arguments_of_knowledge/: mod.rs
crypto_primitives/src/homomorphic_encryption/: mod.rs
crypto_primitives/src/homomorphic_encryption/el_gamal/: ciphertext.rs  ciphertext_arithmetic.rs  mod.rs  plaintext.rs  randomness.rs  tests.rs
crypto_primitives/src/homomorphic_encryption/el_gamal/arithmetic_definitions/: ciphertext.rs  mod.rs  plaintext.rs  randomness.rs
crypto_primitives/src/utils/: mod.rs  ops.rs  permutation.rs  rand.rs  vector_arithmetic.rs
crypto_primitives/src/vector_commitment/: mod.rs
crypto_primitives/src/vector_commitment/pedersen/: commitment_arithmetic.rs  mod.rs  test.rs  tests.rs
crypto_primitives/src/vector_commitment/pedersen/arithmetic_definitions/: commitment.rs  mod.rs  scalar.rs
crypto_primitives/src/zkp/: mod.rs  transcript.rs  utils.rs
crypto_primitives/src/zkp/arguments/: mod.rs
crypto_primitives/src/zkp/arguments/hadamard_product/: mod.rs  proof.rs  prover.rs  tests.rs
crypto_primitives/src/zkp/arguments/matrix_elements_product/: mod.rs  proof.rs  prover.rs  tests.rs
crypto_primitives/src/zkp/arguments/multi_exponentiation/: mod.rs  proof.rs  prover.rs  tests.rs
crypto_primitives/src/zkp/arguments/shuffle/: mod.rs  proof.rs  prover.rs  tests.rs
crypto_primitives/src/zkp/arguments/single_value_product/: mod.rs  proof.rs  prover.rs  tests.rs
crypto_primitives/src/zkp/arguments/zero_value_bilinear_map/: mod.rs  proof.rs  prover.rs  tests.rs
crypto_primitives/src/zkp/proofs/: mod.rs
crypto_primitives/src/zkp/proofs/chaum_pedersen_dl_equality/: mod.rs  proof.rs  prover.rs  test.rs
crypto_primitives/src/zkp/proofs/schnorr_identification/: mod.rs  proof.rs  prover.rs  test.rs
shuffle/: Cargo.toml
shuffle/src/: commitment_key.rs  config.rs  error.rs  lib.rs  proof.rs  prover.rs  tests.rs  utils.rs
shuffle/src/multi_exponent_argument/: error.rs  mod.rs  proof.rs  prover.rs
shuffle/src/product_argument/: mod.rs  proof.rs  prover.rs  tests.rs  verifier.rs
shuffle/src/product_argument/hadamard_product_argument/: mod.rs  proof.rs  prover.rs  tests.rs
shuffle/src/product_argument/single_value_product_argument/: mod.rs  proof.rs  prover.rs  tests.rs
shuffle/src/product_argument/zero_argument/: mod.rs  proof.rs  prover.rs  tests.rs
starknet_curve/: Cargo.toml
starknet_curve/sage_field_parameters/: starknet curve parameters.ipynb
starknet_curve/src/: lib.rs
starknet_curve/src/curves/: mod.rs  tests.rs
starknet_curve/src/fields/: fq.rs  fr.rs  mod.rs  tests.rs
utils/: Cargo.toml
utils/src/: error.rs  lib.rs  rand.rs  vector_arithmetic.rs
verifiable_threshold_masking_protocol/: Cargo.toml
verifiable_threshold_masking_protocol/src/: elgamal.rs  error.rs  lib.rs
verifiable_threshold_masking_protocol/src/chaum_pedersen_dl_equality/: error.rs  mod.rs  proof.rs  prover.rs
verifiable_threshold_masking_protocol/src/discrete_log_vtmp/: mod.rs  tests.rs
verifiable_threshold_masking_protocol/src/schnorr_identification/: error.rs  mod.rs  proof.rs  prover.rs  transcript.rs
