[package]
name = "barnett-smart-card-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
ark-crypto-primitives = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", features = ["std"] }
proof-essentials = { git = "git@github.com:geometryresearch/proof-toolbox" }
merlin = "3.0.0"
rand = "0.8.4"
starknet-curve = { git = "git@github.com:geometryresearch/proof-toolbox" }
thiserror = "1.0.30"

[[example]]
name = "round"
