[package]
name = "card_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.3.0"
ark-ff = "0.3.0"
rand = "0.8.4"
ark-crypto-primitives = "0.3.0"
starknet_curve = { path = "../starknet_curve" }
ark-std = { version = "0.3.0", features = ["std"] }
merlin = "3.0.0"
ark-serialize = "0.3.0"
crypto_primitives = { path = "../crypto_primitives" }
anyhow = "1.0.55"