[package]
name = "starknet_curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-serialize = "0.3.0"
ark-r1cs-std = { version = "^0.3.0", default-features = false, optional = true }
zkp-elliptic-curve = "0.2.0"

[dev-dependencies]
ark-algebra-test-templates = { version = "^0.3.0", default-features = false }


[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field", "base_field" ]
scalar_field = []
base_field = []
r1cs = [ "base_field", "ark-r1cs-std" ]